@@ -7,13 +7,12 @@ AUX 1.0-configure.diff 289 RMD160 2056ce9e3015a20f026105f8104fbfe83424c8d3 SHA1 
 DIST tkTheme.tgz 335061 RMD160 f54e94cc2f6b717f14534b2c605cab3d39897698 SHA1 6a9cbe876a82b26272a91fd163593feaa4831b37 SHA256 e6a2024d4a70ef69108020604de47885d21df09e558ba5cbfde7ccf67fc8a148
 EBUILD tkTheme-1.0-r1.ebuild 917 RMD160 84a33f19055a64b5cb95df3cb09a959e760c96e8 SHA1 ce2892bacf195aa7a119c13b60a35d0ef389a2f5 SHA256 0f1cdf256cc507e82764f7a5b598a5f8d3a8ff4e1b85826eaf9104a1df5a44f8
 EBUILD tkTheme-1.0-r2.ebuild 1138 RMD160 fc187fa991c97f4f5ba27c94dc16ec7fd77e52d8 SHA1 10e068dc5d1d564eea025eed71c158a841d73e35 SHA256 6fc14739900470f932934f098a82d75660e9e31424464128d58387147b27bb01
-EBUILD tkTheme-1.0.ebuild 817 RMD160 f4232b73c5177d78dae44e754e03e6a3a8f9a3c8 SHA1 971a491d581691f96ad6c5a04bf4314601caeebf SHA256 cb85c2a646fe15c40a7f40737697565a323b3b746b17eba106c553942799416c
-MISC ChangeLog 2364 RMD160 8867e6fb4a9699b82e4eb6d6f4dbde3f6a28189e SHA1 e65de1969726a3d68d6dbbf60efa1db0175775d6 SHA256 d3fb7c311c08e316011699a92464601becd84ee5528f677dd7cd781d3d1175eb
+MISC ChangeLog 2447 RMD160 518515ad7334a2c9a21151a433c80b14e500e3bb SHA1 a545f5f8c74a868a078dbba458a8020ed2265a38 SHA256 32d0f4f80f0e9f0ffbc236c6f5a92b0fe34d3ea6738b560bf454f72950a27a83
 MISC metadata.xml 159 RMD160 0b3f1c7d1bf45f7283ab23b3d8fa0a02c688a044 SHA1 0446a3db32f76d33bf9f76b5229b2fd9900d08c6 SHA256 fe5eea9a276e11191a0c8e266e6dc128c3dd73347bb01020814acb0863316029
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREKAAYFAk8CPhUACgkQgAnW8HDreRaqtgCgsrxFSYV/Bsqa6LuVQXtdEpjX
-0OwAn2yMPAKIUjsFnML3hZyMv7emONRs
-=3wnQ
+iEYEAREKAAYFAk8CPk4ACgkQgAnW8HDreRa95ACgyWK6MQagA8ZXpAM+IWHOEVT9
+njAAoIRLb6r+es31QR1cShl+psdRS/gI
+=BH4n
 -----END PGP SIGNATURE-----
